converted px to rem, removed non essential images

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,31 +10,38 @@ html {
   font-size: 100%; /*16px*/
 }
 
+/* colors:
+  #FFFBDF white
+  #160E0C text black
+  #51433B old chocolate
+  #1A2C38 midnight blue
+  #FBC066 sunflower yellow
+  #EB5529 the orange
+  */
+
+  /* Fonts:
+  font-family: "Playfair Display", serif;
+  */
+
 body {
-  background-image: url("/images/restaurant1.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
   background-color: #fffbdf;
-  max-width: 100%;
   font-family: "Playfair Display", serif;
   font-weight: 400;
-  line-height: 1.65;
+  line-height: 1.65rem;
   color: #160e0c;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
 }
 
 p {
   margin-bottom: 1.15rem;
   font-size: 1.5rem;
+  max-width: 18rem;
+  padding: 1.5rem;
 }
 
 h1 {
-  font-size: 64px;
-  line-height: 154.5%;
-  letter-spacing: 1px;
+  font-size: 3rem;
+  line-height: 4.9rem;
+  letter-spacing: 0.06;
   text-transform: uppercase;
   color: #fffbdf;
 }
@@ -45,175 +52,306 @@ h2 {
   font-size: 2.5rem;
   line-height: 1.15;
   font-weight: 600;
+  text-align: center;
 }
 
 h3 {
   font-size: 1.825rem;
+  text-align: center;
+  margin-top: 1rem;
 }
 
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  height: auto;
-  background-color: #fffbdf70;
+hr {
+  border: dotted;
+  color: #fbc066;
+  border-width: 0.375rem;
+  border-bottom: none;
+  width: 50%;
+  margin: auto;
 }
 
-nav ul {
-  width: 30%;
-  display: flex;
-  list-style: none;
-  justify-content: space-evenly;
-  align-items: center;
+.slogan h1 {
+  position: absolute;
+  margin: 12rem 1.25rem;
 }
 
-nav li {
-  font-size: 1.25rem;
-}
-
-nav img {
-  padding: 10px;
-  padding-left: 50px;
-}
-
-a {
-  color: #160e0c;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #eb5529;
-}
-
-.logo-header {
-  margin: 140px 0 120px 370px;
- 
+.slogan img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 main {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  align-items: center;
 }
 
-.menu-section {
-  background-color: #fffbdf70;
+nav ul {
+  display: none;
+}
+
+.navbar {
   display: flex;
-  padding: 10px;
-  justify-content: center;
+  position: absolute;
+  background-color: #fffbdf70;
+  padding: 0.5rem 1rem;
+  width: 100%;
+}
+
+.navbar > :first-child {
+  margin-right: auto;
+}
+
+.navbar a {
+  vertical-align: middle;
+  padding-top: 0.375rem;
+}
+
+.navbar .burger {
+  padding-top: 1.6rem;
 }
 
 .featured {
-  background-color: #fffbdf70;
-  justify-content: space-evenly;
-  padding: 50px;
-  padding-top: 40px;
-  margin: 50;
-}
-
-.featured img {
-  width: 341px;
-  height: auto;
-}
-
-.featured p {
-  margin: 30px 0 0 30px ;
-  width: 284px;
-}
-
-.dessert-section {
-  display: flex;
-  margin-top: 50px;
-  justify-content: flex-end;
+  padding: 3rem;
 }
 
 .dessert-container {
-  display: inline-grid;
-  grid-template-columns: auto auto;
-  background-color: #fffbdf70;
-  border-radius: 4px;
-  height: auto;
-  margin-left: 45%;
-  
-}
-
-.wine {
   padding: 3rem;
-}
-
-.wine h3 {
-  padding-left: 1rem;
-}
-
-.wine p {
-  padding-left: 1rem;
-  max-width: 282px;
-}
-
-.desserts {
-  padding: 3rem;
-}
-
-.desserts h3 {
-  padding-left: 1rem;
-}
-
-.desserts p {
-  padding-left: 1rem;
-  max-width: 282px;
-}
-
-.desserts img {
-
-}
-
-.about-section {
-  background-color: #fffbdf70;
-  border-radius: 4px;
-  margin: 100px 0;
-  height: auto;
-  max-width: 55%;
-  padding-left: 10%;
-}
-
-.about-section h2 {
-  padding: 30px 0;
-  text-align: center;
 }
 
 .about-section p {
-  padding: 10px;
+  max-width: 25rem;
 }
 
 .cover-footer {
-  display: flex;
-  height: 168px;
-  justify-content: space-between;
-  background-color: #fffbdf70;
-}
-
-.icons {
-  display: flex;
-  align-items: flex-end;
-}
-
-.icons li {
-  list-style: none;
-  margin-right: 50px;
-}
-
-.icons ul {
-  display: flex;
-  
+  padding: 3rem 0;
 }
 
 .grid-container {
-  display: inline-grid;
-  grid-template-columns: auto auto;
-  padding: 20px 20px 40px 20px;
+  padding: 3rem;
 }
 
 .grid-item {
-  text-align: left;
-  font-size: 1.5rem;
-  padding: 10px 50px;
+  padding: 0.2rem;
+}
+
+.cover-footer ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-evenly;
+}
+
+.face:hover {
+  content: url("/images/facebook1.svg");
+}
+
+.insta:hover {
+  content: url("/images/Instagram1.svg");
+}
+
+.trip:hover {
+  content: url("/images/Tripadvisor1.svg");
+}
+
+/* Responsiveness */
+@media (min-width: 1170px) {
+  body {
+    background-image: url("/images/restaurant1.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: b#fffbdf;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
+
+  h1 {
+    font-size: 4rem;
+  }
+
+  h2 {
+    text-align: left;
+  }
+
+  h3 {
+    text-align: left;
+    padding-left: 1rem;
+  }
+
+  hr {
+    display: none;
+  }
+
+  .slogan {
+    display: block;
+  }
+
+  .slogan h1 {
+    position: relative;
+    line-height: 154%;
+    margin-left: 24rem;
+  }
+
+  .slogan img {
+    display: none;
+  }
+
+  .navbar {
+    justify-content: space-between;
+    height: auto;
+  }
+
+  .burger {
+    display: none;
+  }
+
+  nav ul {
+    width: 30%;
+    display: flex;
+    list-style: none;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  nav li {
+    font-size: 1.25rem;
+  }
+
+  nav img {
+    padding: 0.625rem;
+    padding-left: 3.125rem;
+  }
+
+  a {
+    color: #160e0c;
+    text-decoration: none;
+  }
+
+  a:hover {
+    color: #eb5529;
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
+
+  .menu-section {
+    background-color: #fffbdf70;
+    display: flex;
+    padding: 0.625rem;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .featured {
+    background-color: #fffbdf70;
+    justify-content: space-evenly;
+    padding: 1rem;
+    padding-top: 2.5rem;
+  }
+
+  .featured img {
+    width: 21.3rem;
+    height: auto;
+  }
+
+  .featured p {
+    padding: 1rem;
+    width: 17.75rem;
+  }
+
+  .dessert-section {
+    display: flex;
+    margin-top: 3.125rem;
+    width: 100%;
+  }
+
+  .dessert-container {
+    display: flex;
+    background-color: #fffbdf70;
+    width: 100%;
+    border-radius: 0.25rem;
+    height: auto;
+    margin-left: 45%;
+    padding: 2rem 1rem 0 1rem;
+  }
+
+  .wine {
+    margin: 1rem 2rem;
+  }
+
+  .wine p {
+    padding: 1rem;
+  }
+
+  .desserts {
+    margin: 1rem 2rem;
+  }
+
+  .desserts p {
+    padding: 1rem;
+  }
+
+  .about-section {
+    display: flex;
+    flex-direction: column;
+    background-color: #fffbdf70;
+    width: 100%;
+    border-radius: 0.25rem;
+    margin: 3.125rem 0;
+    margin-right: 80%;
+    padding: 3rem 1rem 1rem 1rem;
+  }
+
+  .about-section h2 {
+    margin: 0;
+    padding-left: 50rem;
+  }
+
+  .about-section p {
+    margin: 0;
+    padding-left: 50rem;
+    max-width: none;
+  }
+
+  .cover-footer {
+    display: flex;
+    height: auto;
+    justify-content: space-between;
+    background-color: #fffbdf;
+    padding: 0;
+    margin: 0;
+  }
+
+  .grid-container {
+    display: inline-grid;
+    grid-template-columns: auto auto;
+  }
+
+  .grid-item {
+    font-size: 1.5rem;
+    margin-left: 2rem;
+    padding: 0.5rem;
+  }
+
+  .icons {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 3.125rem;
+  }
+
+  .icons li {
+    list-style: none;
+    margin-right: 3.125rem;
+  }
+
+  .icons ul {
+    display: flex;
+  }
 }
